pc/detect_by_realsense/realsense/log/build_2023-11-12_21-03-09/depth_example/stderr.log
  File "/home/boma/realsense/install/depth_example/lib/python3.10/site-packages/depth_example/mail_node.py", line 428
    global ska
    ^^^^^^^^^^
SyntaxError: name 'ska' is used prior to global declaration

